# Marvin-Python

./: Produtos  Produtos.py  janela  lista_compras.txt  tempratura.py
.github/workflows/: main.yml
Classes/: cadastro.py
Função/: BancoAvançado.py  BancoFunção.py  Q1_Função.py  questão1.py
Listas/: questão1.py
Pyp/: EnsinoMedio.py  Fundamental1.py  Fundamental2.py  Matematica.py  README.md  extrai_texto.py  pyproject.toml  requirements.txt  setup.py  teste.py
Python/: compras.db
Python/Banco de dados/: Criando.py  jovens.db.sql
Python/Banco de dados/data/: banco_de_dados.db
Python/Estudos python/: variaveis.py
Python/Estudos python/conta bancaria/: Conta.py  cliente.py
Python/Função/: BancoFunção.py  Q1_Função.py
Python/desafios/Carrinho/: Lista.py  Produtos.py
Python/desafios/cadastro/: cadastro.py
Python/desafios/cadastro/data/: cadastro_alunos.db
Python/guardando/: calculos.py
Python/interfaces/: formulario.py
WEB/cadastro/Clientes/: settings.py
WEB/projeto_cad_usuarios/Cadastramento/: apps.py
WEB/projeto_cad_usuarios/app_cad_usuarios/usuario/: home.html
cadastro/Clientes/: urls.py
desafios/: cadastro.py
guardando/: Compras.py  Vogais.py
guarde/: views.py
interfaces/: janela
projeto/app_cad_usuarios/: apps.py  models.py  views.py
projeto/app_cad_usuarios/templates/usuario/: home.html  usuarios.html
projeto/projeto/: settings.py  urls.py
projeto/static/CSS/: style.css
projeto/static/css/: gerenciamento.css
projeto/usuario/: settings.py  urls.py
projeto_cad_usuarios/app_cad_usuarios/: views.py
